--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ li a {
     line-height: 3rem;
     text-decoration: none;
     font-size: 1rem;
-    font-family: "Bernard MT Condensed";
+    font-family: "Verdana";
     margin: 0;
     padding: 0.5rem;
 }
